# solidity-projects

./: .gitignore  .gitmodules  README.md  hd-wallet.ts  package-lock.json  package.json
Bank/module2/: README.md
modoule2/: .gitmodules
modoule2/Bank/: package-lock.json
modoule2/BigBank/: README.md  foundry.toml
modoule3/BaseERC20/: README.md
modoule3/BaseERC721/: README.md
modoule3/ERC20Faucet/: README.md
modoule3/NFTMarket/: CLAUDE.md  README.md  foundry.toml
modoule3/airdrop/: README.md
modoule4/: check-anvil.js
modoule4/ReadChain/: .env  SendEtherButton.test.tsx  SendEtherButton.tsx  jest.config.js  package-lock.json  package.json  setupTests.ts  tsconfig.json  uniswap_read.js
modoule4/TokenBank/: README.md  foundry.toml
modoule4/cliWallet/: .env.example  .gitignore  4view.md  README.md  package-lock.json  package.json  tsconfig.json
modoule5/: README.md
modoule5/LockCoin/: README.md
modoule5/MultiSigWallet/: README.md
modoule5/UUPS/: README.md
modoule7/: claude.md
modoule7/meme-token-tracker/: .gitignore  .substreams.yaml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.toml  deploy.sh  proxychains.conf  run_mainnet_test.sh  setup_proxy.sh  substreams.yaml  test_local.sh  test_report.md
modoule7/meme-token-tracker/benches/: performance.rs
modoule7/meme-token-tracker/docs/: API.md  CONFIG.md  DEPLOYMENT.md
modoule7/meme-token-tracker/proto/: meme.proto
modoule7/meme-token-tracker/src/: integration_tests.rs  lib.rs  tests.rs
modoule7/meme-token-tracker/src/pb/: .last_generated_hash  meme.rs  mod.rs
(+336 files in other folders)
